tests/negative/gold/abstract6-test.gold
tests/negative/abstract6-test.toit:23:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
